yaml-examples/openmct/openmct-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmct
  namespace: default
spec:
  selector:
    app: openmct
  ports:
  - name: web
    port: 8080
    targetPort: 8080
