yaml-examples/openmct/openmct-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmct
spec:
  rules:
  - host: openmct.lan
    http:
      paths:
      - backend:
          service:
            name: openmct
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
